<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@android:color/white">
    
    <ImageView
        android:id="@+id/imgAnimation"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/animasi_desc"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_username"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        android:inputType="text"
        android:autofillHints="username"
        android:minHeight="48dp"
        android:padding="10dp"
        android:background="@android:drawable/edit_text"
        android:layout_marginBottom="15dp"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:minHeight="48dp"
        android:padding="10dp"
        android:background="@android:drawable/edit_text"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:id="@+id/etBirthPlace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Masukkan Tempat Lahir"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        android:inputType="text"
        android:minHeight="48dp"
        android:padding="10dp"
        android:background="@android:drawable/edit_text"
        android:layout_marginBottom="15dp"/>

    <EditText
        android:id="@+id/etBirthDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Masukkan Tanggal Lahir (DD/MM/YYYY)"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        android:inputType="date"
        android:minHeight="48dp"
        android:padding="10dp"
        android:background="@android:drawable/edit_text"
        android:layout_marginBottom="15dp"/>

    <EditText
        android:id="@+id/etAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Masukkan Alamat"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        android:padding="10dp"
        android:background="@android:drawable/edit_text"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxWidth="300dp"
        android:text="@string/btn_login"
        android:contentDescription="@string/login_button_desc"
        android:padding="10dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>
</LinearLayout>
